# Declare python project metadata
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icpp-candid"
description = "C++ Candid Library"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "icpp-pro", email = "icpp@icpp.world" }]
maintainers = [{ name = "icpp-pro", email = "icpp@icpp.world" }]
license = { file = "LICENSE" }
keywords = [
    "C++ Candid Library",
    "Internet Computer",
    "C++",
    "Candid",
    "blockchain",
]
classifiers = [
    # How mature is this project? Common values are
    #   1 - Planning
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "pylint==2.13.9",
    "mypy==1.8.0",
    "build==1.2.2",
    "twine==6.0.1",
    "mkdocs==1.5.3",
    "types-requests==2.31.0.10",
]

[project.urls]
Homepage = "https://www.onicai.com/"
Documentation = "https://docs.icpp.world/"
Repository = "https://github.com/icppWorld/icpp-candid"
Issues = "https://github.com/icppWorld/icpp-candid/issues"
Changelog = "https://docs.icpp.world/release-notes.html#changelog"
